policies/sushi/sushi-networkpolicies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-from-openshift-ingress
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: allow-from-openshift-monitoring
# spec:
#   podSelector: {}
#   ingress:
#     - from:
#         - namespaceSelector:
#             matchLabels:
#               network.openshift.io/policy-group: monitoring
#   policyTypes:
#     - Ingress
# ---
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: allow-same-namespace
# spec:
#   podSelector: {}
#   ingress:
#     - from:
#         - podSelector: {}
#   policyTypes:
#     - Ingress
